modal functionality added

--- a/src/output.css
+++ b/src/output.css
@@ -12,7 +12,6 @@
     --color-yellow-400: oklch(0.852 0.199 91.936);
     --color-teal-500: oklch(0.704 0.14 182.503);
     --color-cyan-500: oklch(0.715 0.143 215.221);
-    --color-purple-300: oklch(0.827 0.119 306.383);
     --color-purple-500: oklch(0.627 0.265 303.9);
     --color-purple-600: oklch(0.558 0.288 302.321);
     --color-purple-700: oklch(0.496 0.265 301.924);
@@ -40,6 +39,7 @@
     --text-2xl--line-height: calc(2 / 1.5);
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-3xl: 1.5rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
@@ -5240,6 +5240,9 @@
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
+  .h-\[40px\] {
+    height: 40px;
+  }
   .h-full {
     height: 100%;
   }
@@ -5368,6 +5371,9 @@
   }
   .w-96 {
     width: calc(var(--spacing) * 96);
+  }
+  .w-\[40px\] {
+    width: 40px;
   }
   .w-full {
     width: 100%;
@@ -6124,6 +6130,9 @@
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
+  .rounded-md {
+    border-radius: var(--radius-md);
+  }
   .rounded-selector {
     border-radius: var(--radius-selector);
   }
@@ -6486,9 +6495,6 @@
   }
   .border-gray-300 {
     border-color: var(--color-gray-300);
-  }
-  .border-purple-300 {
-    border-color: var(--color-purple-300);
   }
   .border-purple-600 {
     border-color: var(--color-purple-600);
